Added type arguments to generic types, removed unnecessary casts, added missing @Override annotations, changed to use the methods Boolean.valueOf and Integer.valueof and other minor changes.
There shouldn't be, any more, unnecessary casts, missing @Override annotations and missing type arguments in the paros and zap packages.